# llm-jepa

./: .gitignore  environment.yml  eval.py  pyproject.toml  train.py
configs/: default.toml
configs/experiments/: replicate_stp_synth.toml  translation_350m.toml  translation_canary.toml
configs/models/llama-350m/: config.json
configs/models/llama-tiny/: config.json
configs/strategies/: jepa.toml  regular.toml  stp.toml
llm_jepa/: __init__.py  callbacks.py  config.py  data.py  losses.py  models.py  utils.py
llm_jepa/evaluation/: __init__.py  evaluate.py  metrics.py
llm_jepa/strategies/: __init__.py  base.py  jepa.py  stp.py
scripts/: prepare_all.sh  prepare_opus.py  run_canary.sh  run_single_gpu.sh  slurm_eval.sh  slurm_train.sh
