[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-jepa"
version = "0.1.0"
description = "Joint Embedding Predictive Architecture and Semantic Tube Prediction for LLMs"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "datasets",
    "accelerate",
    "peft",
    "dynaconf>=3.2",
    "safetensors",
    "tqdm",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "sacrebleu",
]

[tool.setuptools.packages.find]
include = ["llm_jepa*"]
